k8s-manifests/podinfo-manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: podinfo
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: podinfo-too
