k8s-manifests/podinfo-k8s-manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: podinfo
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: podinfo-too
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: podinfo
  namespace: podinfo
spec:
  gateways:
  - istio-system/public
  hosts:
  - podinfo.bigbang.dev
  http:
  - route:
    - destination:
        host: podinfo
        port:
          number: 9898
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: podinfo-too
  namespace: podinfo-too
spec:
  gateways:
  - istio-system/passthrough
  hosts:
  - keycloak.bigbang.dev
  tls:
  - match:
    - sniHosts: ["keycloak.bigbang.dev"]
    route:
    - destination:
        host: podinfo-too
        port:
          number: 9899
---
